Allow renaming GameObjects to unique names